# stellar-swap

./: .gitignore  bun.lockb  package-lock.json  package.json  private.md
frontend/: .env.example  .gitignore  bun.lockb  package.json
frontend/src/app/: page.tsx
frontend/src/components/: SilverToken.tsx  StellerWalletButton.tsx  SwapInterface.tsx  WalletButton.tsx
frontend/src/contracts/: silver.ts  swap.ts  util.ts
frontend/src/hooks/: useFreighter.ts
frontend/src/lib/: wallet.ts
frontend/src/utils/: stellar.ts
relayer/: bun.lockb  package.json
relayer/1inch-contracts/AddressLib.sol/: AddressLib.json
relayer/1inch-contracts/BaseEscrow.sol/: BaseEscrow.json
relayer/1inch-contracts/BaseEscrowFactory.sol/: BaseEscrowFactory.json
relayer/1inch-contracts/BaseExtension.sol/: BaseExtension.json
relayer/1inch-contracts/Clones.sol/: Clones.json
relayer/1inch-contracts/Context.sol/: Context.json
relayer/1inch-contracts/Create2.sol/: Create2.json
relayer/1inch-contracts/Errors.sol/: Errors.json
relayer/1inch-contracts/Escrow.sol/: Escrow.json
relayer/1inch-contracts/EscrowDst.sol/: EscrowDst.json
relayer/1inch-contracts/EscrowFactory.sol/: EscrowFactory.json
relayer/src/: config.ts  server.ts  swagger-output.json  swagger.js
src/app/: globals.css  layout.tsx  page.tsx
src/constants/: index.ts
src/lib/: utils.ts
src/providers/: WalletProvider.tsx
stellar-contracts/contracts/silver/: Cargo.toml
stellar-contracts/contracts/silver/src/: lib.rs
stellar-contracts/tests/: README.md  bun.lockb  index.test.ts  index.ts  package.json
(+55 files in other folders)
